--- a/Biom/Biom/Base.lproj/Main.storyboard
+++ b/Biom/Biom/Base.lproj/Main.storyboard
@@ -225,20 +225,21 @@
                                         <rect key="frame" x="0.0" y="30" width="348" height="80"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BIOM 사용자들의 데이터에 의해 측정되었습니다" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qiF-bW-DYo">
-                                                <rect key="frame" x="32.5" y="63" width="155" height="10"/>
+                                                <rect key="frame" x="32.5" y="64" width="160.5" height="9"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="8"/>
                                                 <color key="textColor" red="0.19607843137254902" green="0.33725490196078434" blue="0.48627450980392156" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Awk-Nr-jyx">
-                                                <rect key="frame" x="0.0" y="30" width="220" height="27"/>
+                                                <rect key="frame" x="0.0" y="30" width="225.5" height="28"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="p5J-r7-PcX">
-                                                        <rect key="frame" x="10" y="4" width="200" height="20"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="p5J-r7-PcX">
+                                                        <rect key="frame" x="10" y="4" width="205.5" height="20"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="강수확률 by BIOM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ziL-5A-XfC">
                                                                 <rect key="frame" x="0.0" y="0.0" width="93.5" height="20"/>
                                                                 <constraints>
+                                                                    <constraint firstAttribute="width" constant="93.5" id="Ihf-IX-jxi"/>
                                                                     <constraint firstAttribute="height" constant="20" id="WsH-Sd-IpH"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
@@ -246,16 +247,17 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="89%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S4b-Ir-90t">
-                                                                <rect key="frame" x="124.5" y="0.0" width="24.5" height="20"/>
+                                                                <rect key="frame" x="124.5" y="0.0" width="30" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="GTP-8h-en8"/>
+                                                                    <constraint firstAttribute="width" constant="30" id="SZN-KZ-1HW"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0S8-LX-Bpd">
-                                                                <rect key="frame" x="180" y="0.0" width="20" height="20"/>
+                                                                <rect key="frame" x="185.5" y="0.0" width="20" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="RyJ-bL-cnt"/>
                                                                     <constraint firstAttribute="width" constant="20" id="xYg-4Y-GQH"/>
@@ -267,10 +269,8 @@
                                                             </button>
                                                         </subviews>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="200" id="08d-0h-L0R"/>
-                                                            <constraint firstItem="ziL-5A-XfC" firstAttribute="top" secondItem="p5J-r7-PcX" secondAttribute="top" id="6dv-eX-J5H"/>
-                                                            <constraint firstItem="S4b-Ir-90t" firstAttribute="top" secondItem="p5J-r7-PcX" secondAttribute="top" id="Uqd-M4-VIM"/>
-                                                            <constraint firstItem="0S8-LX-Bpd" firstAttribute="top" secondItem="p5J-r7-PcX" secondAttribute="top" id="VJP-9m-Hcd"/>
+                                                            <constraint firstItem="0S8-LX-Bpd" firstAttribute="leading" secondItem="S4b-Ir-90t" secondAttribute="trailing" constant="31" id="QJC-DK-Apa"/>
+                                                            <constraint firstItem="S4b-Ir-90t" firstAttribute="leading" secondItem="ziL-5A-XfC" secondAttribute="trailing" constant="31" id="hSv-r2-VPP"/>
                                                         </constraints>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
@@ -282,12 +282,14 @@
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.19607843137254902" green="0.33725490196078434" blue="0.48627450980392156" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="220" id="3Zw-oc-of3"/>
-                                                    <constraint firstAttribute="trailing" secondItem="p5J-r7-PcX" secondAttribute="trailing" constant="10" id="4F9-RB-UQK"/>
-                                                    <constraint firstAttribute="height" constant="27" id="5NW-u1-8pI"/>
-                                                    <constraint firstItem="p5J-r7-PcX" firstAttribute="height" secondItem="Awk-Nr-jyx" secondAttribute="height" multiplier="0.740741" id="Wbk-WP-dw5"/>
-                                                    <constraint firstItem="p5J-r7-PcX" firstAttribute="leading" secondItem="Awk-Nr-jyx" secondAttribute="leading" constant="10" id="bnp-oc-jwy"/>
-                                                    <constraint firstItem="p5J-r7-PcX" firstAttribute="top" secondItem="Awk-Nr-jyx" secondAttribute="top" constant="4" id="dNA-ie-kg2"/>
+                                                    <constraint firstItem="0S8-LX-Bpd" firstAttribute="top" secondItem="Awk-Nr-jyx" secondAttribute="top" constant="4" id="0TL-ov-hum"/>
+                                                    <constraint firstItem="0S8-LX-Bpd" firstAttribute="centerY" secondItem="Awk-Nr-jyx" secondAttribute="centerY" id="DeE-If-yAh"/>
+                                                    <constraint firstItem="ziL-5A-XfC" firstAttribute="leading" secondItem="Awk-Nr-jyx" secondAttribute="leading" constant="10" id="N45-jb-zBd"/>
+                                                    <constraint firstItem="S4b-Ir-90t" firstAttribute="centerY" secondItem="Awk-Nr-jyx" secondAttribute="centerY" id="Sa7-uM-hUC"/>
+                                                    <constraint firstItem="S4b-Ir-90t" firstAttribute="top" secondItem="Awk-Nr-jyx" secondAttribute="top" constant="4" id="X7G-Mc-MF5"/>
+                                                    <constraint firstItem="ziL-5A-XfC" firstAttribute="centerY" secondItem="Awk-Nr-jyx" secondAttribute="centerY" id="f2X-LA-ZMH"/>
+                                                    <constraint firstItem="ziL-5A-XfC" firstAttribute="top" secondItem="Awk-Nr-jyx" secondAttribute="top" constant="4" id="ghJ-ve-tJu"/>
+                                                    <constraint firstAttribute="trailing" secondItem="0S8-LX-Bpd" secondAttribute="trailing" constant="10" id="w5j-Rx-zkb"/>
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
@@ -302,8 +304,10 @@
                                             <constraint firstAttribute="height" constant="80" id="4zs-qD-y2D"/>
                                             <constraint firstItem="qiF-bW-DYo" firstAttribute="top" secondItem="Awk-Nr-jyx" secondAttribute="bottom" constant="6" id="EpT-cB-wR4"/>
                                             <constraint firstItem="qiF-bW-DYo" firstAttribute="centerX" secondItem="Awk-Nr-jyx" secondAttribute="centerX" id="QGr-hc-DbB"/>
+                                            <constraint firstItem="qiF-bW-DYo" firstAttribute="leading" secondItem="oez-fI-5fo" secondAttribute="leading" constant="32.5" id="RNy-av-aim"/>
                                             <constraint firstAttribute="width" constant="348" id="pkD-Ef-W4g"/>
                                             <constraint firstItem="Awk-Nr-jyx" firstAttribute="leading" secondItem="oez-fI-5fo" secondAttribute="leading" id="vYt-IZ-fxO"/>
+                                            <constraint firstAttribute="bottom" secondItem="qiF-bW-DYo" secondAttribute="bottom" constant="7" id="xA6-cP-1DS"/>
                                             <constraint firstItem="Awk-Nr-jyx" firstAttribute="top" secondItem="oez-fI-5fo" secondAttribute="top" constant="30" id="z4B-Yr-xWn"/>
                                         </constraints>
                                     </view>
