--- a/Biom/Biom/Base.lproj/Main.storyboard
+++ b/Biom/Biom/Base.lproj/Main.storyboard
@@ -407,7 +407,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="470" id="ako-qV-lsX"/>
                                         </constraints>
-                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="O2t-yT-d9S">
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="O2t-yT-d9S">
                                             <size key="itemSize" width="284" height="89"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -417,9 +417,8 @@
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="MainCommentCell" reuseIdentifier="MainCommentCell" id="dHh-nu-myV" customClass="MainCommentCell" customModule="Biom" customModuleProvider="target">
                                                 <rect key="frame" x="32" y="0.0" width="284" height="89"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xmr-7I-1X7">
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xmr-7I-1X7">
                                                     <rect key="frame" x="0.0" y="0.0" width="284" height="89"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이것은 닉네임" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Za6-4l-Gjt">
                                                             <rect key="frame" x="18" y="13" width="38.5" height="8.5"/>
@@ -475,7 +474,12 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </collectionViewCellContentView>
-                                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottomMargin" secondItem="xmr-7I-1X7" secondAttribute="bottom" constant="-8" id="Lmq-EQ-3ah"/>
+                                                    <constraint firstItem="xmr-7I-1X7" firstAttribute="leading" secondItem="dHh-nu-myV" secondAttribute="leadingMargin" id="TTX-nv-apE"/>
+                                                    <constraint firstItem="xmr-7I-1X7" firstAttribute="top" secondItem="dHh-nu-myV" secondAttribute="topMargin" constant="-8" id="hFN-r8-ivq"/>
+                                                    <constraint firstAttribute="trailingMargin" secondItem="xmr-7I-1X7" secondAttribute="trailing" constant="-8" id="xcu-GN-wqT"/>
+                                                </constraints>
                                                 <edgeInsets key="layoutMargins" top="8" left="0.0" bottom="8" right="8"/>
                                                 <size key="customSize" width="284" height="89"/>
                                                 <connections>
@@ -578,9 +582,6 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
